[package]
name = "rust-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "advanced"] }
tokio = { version = "1.35", features = ["full"] }
zstd = "0.13"
rfd = "0.14"
walkdir = "2.4"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.5"
anyhow = "1.0"
